fix page layout problems

--- a/src/main/webapp/resources/css/style_out.css
+++ b/src/main/webapp/resources/css/style_out.css
@@ -186,7 +186,7 @@ button {
     top: 0;
     left: 0;
     width: 100%;
-    height: 4rem;
+    height: 3.5rem;
     z-index: 9;
     background-color: #fff;
     -moz-animation-name: fade;
